Import of HAVI/Spreadsheet-PrintExcelSheet-0.02 from CPAN.
gitpan-cpan-distribution: Spreadsheet-PrintExcelSheet
gitpan-cpan-version:      0.02
gitpan-cpan-path:         HAVI/Spreadsheet-PrintExcelSheet-0.02.tar.gz
gitpan-cpan-author:       HAVI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,5 @@ Revision history for Perl extension Spreadsheet::PrintExcelSheet.
 	- original version; created by h2xs 1.23 with options
 		-XA -n Spreadsheet::PrintExcelSheet
 
+0.02  Wed Dec 29 14:22:00 2010
+   - bugfix: Win32::OLE
