--- a/README
+++ b/README
@@ -1,27 +1,21 @@
-PrintExcelSheet version 0.01
-============================
+NAME
+    PrintExcelSheet - a module for print Excelsheets
 
-INSTALLATION
+SYNOPSIS
+            use warnings;
+            use strict;
+            use PrintExcelsheet qw( PrintIt );
 
-To install this module type the following:
+            PrintIt("C:\\Test.xls", 'all'); # print all sheets
+            PrintIt("C:\\Test.xls", 2..5);  # print sheet 2 to 5
+            PrintIt("C:\\Test.xls", 6);     # print sheet 6
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+ABSTRACT
+    Test
 
-DEPENDENCIES
+DESCRIPTION
+    ...
 
-This module requires these other modules and libraries:
+AUTHOR AND LICENSE
+    copyright 2009 (c) Gernot Havranek
 
-   PrintExcelSheet
-
-COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
-
-Copyright (C) 2009 by Gernot Havranek
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.10.0 or,
-at your option, any later version of Perl 5 you may have available.
